# zippy

./:  .dependency  .clang-format  .gitignore  CMakeLists.txt  INFO.txt  README.md  main.cpp  runtest.sh
client/: benchmark.py  client.py  requirements.txt  zippy_pb2.py  zippy_pb2_grpc.py
git-hooks/: pre-commit
include/: ClientHandler.h  Database.h  HashTable.h  Server.h  SnapshotManager.h  ZippyClient.h  ZippyService.h  zippy.grpc.pb.h  zippy.pb.h
proto/: zippy.proto
scripts/: run_tests.sh  run_zippy.sh  setup_hooks.sh
src/: ClientHandler.cpp  Database.cpp  HashTable.cpp  Server.cpp  SnapshotManager.cpp  ZippyClient.cpp  ZippyService.cpp  main.cpp
tests/: tDatabase.cpp  tZippyService.cpp  test.cpp  test_main.cpp
